grammar.js
    source_file: $ => repeat($._source_element),

    _source_element: $ => choice(
      $.pragma_directive,
      $.import_directive,
      $.contract_declaration,
      $.interface_declaration,
      $.library_declaration,
      $.constant_variable_declaration,
      $.user_defined_value_type,
      $.error_declaration,
      $.event_declaration,
      $.function_definition,
      $.using_directive,
      $.struct_declaration,
      $.enum_declaration,
      // More elements will be added as we implement them
    ),

    // Pragma directives
    pragma_directive: $ => seq(
      'pragma',
      $.pragma_token,
      ';'
    ),

    pragma_token: $ => seq(
      field('name', $.pragma_name),
      field('value', $.pragma_value)
    ),

    pragma_name: $ => /[a-zA-Z][a-zA-Z0-9_-]*/,
    pragma_value: $ => /[^;]+/,

    // Import directives
    import_directive: $ => seq(
      'import',
      choice(
        // Simple import: import "path";
        $.string_literal,
        // Import with alias: import "path" as Name;
        seq($.string_literal, $.import_alias),
        // Import star: import * as Name from "path";
        seq($.import_star, $.import_alias, 'from', $.string_literal),
        // Import clause: import {A, B} from "path";
        seq($.import_clause, 'from', $.string_literal)
      ),
      ';'
    ),

    import_star: $ => '*',

    import_clause: $ => seq(
      '{',
      commaSep($.import_name),
      '}'
    ),

    import_name: $ => seq(
      $.identifier,
      optional($.import_alias)
    ),

    import_alias: $ => seq('as', $.identifier),

    // String literals
    string_literal: $ => choice(
      seq('"', repeat(/[^"\\]|\\.|\\\r?\n/), '"'),
      seq("'", repeat(/[^'\\]|\\.|\\\r?\n/), "'")
    ),

    // Contract declarations
    contract_declaration: $ => seq(
      optional('abstract'),
      'contract',
      $.identifier,
      repeat($.inheritance_specifier),
      $.contract_body
    ),

    interface_declaration: $ => seq(
      'interface',
      $.identifier,
      repeat($.inheritance_specifier),
      $.contract_body
    ),

    library_declaration: $ => seq(
      'library',
      $.identifier,
      $.contract_body
    ),

    inheritance_specifier: $ => seq(
      'is',
      commaSep1($.inheritance_type)
    ),

    inheritance_type: $ => seq(
      $.user_defined_type,
      optional($.call_arguments)
    ),

    contract_body: $ => seq(
      '{',
      repeat($._contract_member),
      '}'
    ),

    _contract_member: $ => choice(
      $.state_variable_declaration,
      $.function_definition,
      $.constructor_definition,
      $.receive_definition,
      $.fallback_definition,
      $.modifier_definition,
      $.error_declaration,
      $.event_declaration,
      $.user_defined_value_type,
      $.using_directive,
      $.struct_declaration,
      $.enum_declaration,
      // More contract members will be added later
    ),

    // User-defined types (for inheritance and other uses)  
    user_defined_type: $ => prec.left(-2, dotSep1($.identifier)),

    // Call arguments (for constructor calls in inheritance)
    call_arguments: $ => seq(
      '(',
      commaSep($._expression),
      ')'
    ),

    // State variables and constants
    state_variable_declaration: $ => seq(
      $.type_name,
      repeat(choice(
        $.visibility,
        $.state_mutability,
        $.storage_location,
        $.override_specifier
      )),
      $.identifier,
      optional(seq('=', $._expression)),
      ';'
    ),

    constant_variable_declaration: $ => seq(
      $.type_name,
      'constant',
      $.identifier,
      '=',
      $._expression,
      ';'
    ),

    // Type system
    type_name: $ => choice(
      $.primitive_type,
      $.user_defined_type,
      $.array_type,
      prec(50, $.mapping_type)
    ),

    primitive_type: $ => choice(
      'bool',
      'string',
      prec(1, seq('address', 'payable')),
      'address',
      'bytes',
      /uint(8|16|24|32|40|48|56|64|72|80|88|96|104|112|120|128|136|144|152|160|168|176|184|192|200|208|216|224|232|240|248|256)?/,
      /int(8|16|24|32|40|48|56|64|72|80|88|96|104|112|120|128|136|144|152|160|168|176|184|192|200|208|216|224|232|240|248|256)?/,
      /bytes(1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24|25|26|27|28|29|30|31|32)/
    ),

    array_type: $ => prec.dynamic(2, prec.right(seq(
      choice($.primitive_type, $.user_defined_type),
      '[',
      optional($._expression),
      ']'
    ))),

    mapping_type: $ => seq(
      'mapping',
      '(',
      $.type_name,
      optional($.identifier),
      '=>',
      $.type_name,
      optional($.identifier),
      ')'
    ),

    // Modifiers and specifiers
    visibility: $ => choice(
      'public',
      'private',
      'internal',
      'external'
    ),

    state_mutability: $ => choice(
      'constant',
      'immutable',
      'pure',
      'view',
      'payable'
    ),

    storage_location: $ => choice(
      'memory',
      'storage',
      'calldata',
      'transient'
    ),

    // Function definitions
    function_definition: $ => seq(
      'function',
      $.identifier,
      $.parameter_list,
      repeat(choice(
        $.visibility,
        $.state_mutability,
        $.virtual_specifier,
        $.override_specifier,
        $.modifier_invocation
      )),
      optional($.return_type_definition),
      choice($.function_body, ';')
    ),

    constructor_definition: $ => seq(
      'constructor',
      $.parameter_list,
      repeat(choice(
        $.visibility,
        $.state_mutability,
        $.modifier_invocation
      )),
      $.function_body
    ),

    receive_definition: $ => seq(
      'receive',
      $.parameter_list,
      repeat(choice(
        $.visibility,
        $.state_mutability
      )),
      $.function_body
    ),

    fallback_definition: $ => seq(
      'fallback',
      optional($.parameter_list),
      repeat(choice(
        $.visibility,
        $.state_mutability
      )),
      $.function_body
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')'
    ),

    parameter: $ => seq(
      $.type_name,
      optional($.storage_location),
      optional($.identifier)
    ),

    return_type_definition: $ => seq(
      'returns',
      $.parameter_list
    ),

    function_body: $ => seq(
      '{',
      repeat($._statement),
      '}'
    ),

    virtual_specifier: $ => 'virtual',
    override_specifier: $ => 'override',

    modifier_invocation: $ => seq(
      $.identifier,
      optional($.call_arguments)
    ),

    // User-defined value types
    _statement: $ => choice(
      $.expression_statement,
      $.variable_declaration_statement,
      $.if_statement,
      $.for_statement,
      $.while_statement,
      $.do_while_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.emit_statement,
      $.revert_statement,
      $.try_statement,
      $.block_statement,
      $.unchecked_block,
      $.assembly_statement,
      $.placeholder_statement,
    ),

    _expression: $ => choice(
      $.assignment_expression,
      $.augmented_assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.update_expression,
      $.struct_expression,
      $.struct_literal,
      $.call_expression,
      $.member_expression,
      $.array_access,
      $.slice_access,
      $.new_expression,
      $.payable_expression,
      $.type_expression,
      $.parenthesized_expression,
      $.array_literal,
      $.tuple_literal,
      $.parenthesized_type,
      $._primary_expression
    ),

    number_literal: $ => seq(
      choice(
        /\d+(_?\d+)*(\.\d+(_?\d+)*)?([eE][+-]?\d+(_?\d+)*)?/,
        /\.\d+(_?\d+)*([eE][+-]?\d+(_?\d+)*)?/
      ),
      optional(choice(
        'wei', 'gwei', 'ether',
        'seconds', 'minutes', 'hours', 'days', 'weeks', 'years'
      ))
    ),


    comment: $ => token(prec(PREC.COMMENT, choice(
      seq('//', /.*/),
      seq(
        '/*',
        repeat(choice(
          /[^*]+/,
          seq('*', /[^/]/)
        )),
        '*/'
      )
    ))),

    // Identifier (required for word token)
    identifier: $ => /[a-zA-Z_$][a-zA-Z0-9_$]*/,
  }
});

// Helper functions
function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)), optional(','));
}

function dotSep1(rule) {
  return seq(rule, repeat(seq('.', rule)));
}
