test/corpus/01_basics.txt
================================================================================
Empty source file
================================================================================

---

(source_file)

================================================================================
Single line comment
================================================================================

// This is a comment

---

(source_file
  (comment))

================================================================================
Multi-line comment
================================================================================

/*
 * Multi-line comment
 * with multiple lines
 */

---

(source_file
  (comment))

================================================================================
Nested comments (should not parse)
================================================================================

/* outer /* inner */ still outer */

---

(source_file
  (comment)
  (ERROR
    (type_name
      (user_defined_type
        (identifier)))
    (identifier)))

================================================================================
Source file with just comments
================================================================================

// First comment
/* Second comment */
// Third comment

---

(source_file
  (comment)
  (comment)
  (comment))
